@@ -1,6 +1,9 @@
 FlightPath 5.x Changelog
 ========================
 
+2016-04-14
+  Added extra functionality to CourseList.
+
 2016-04-09
   To prepare for dealing with prereqs, I changed the way the draw_course_row function is written in AdvisingScreen,
   to allow hooks to change elements of it.
